<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Raspberry Leds</string>
    <string name="app_version">v0.1</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_reload">Reload</string>
    <string name="action_speak">Speak</string>
    <string name="loading">Loading...</string>

    <string name="lbl_LED0">Led 0</string>
    <string name="lbl_LED1">Led 1</string>
    <string name="lbl_LED2">Led 2</string>
    <string name="lbl_LED3">Led 3</string>
    <string name="lbl_LED4">Led 4</string>
    <string name="lbl_LED5">Led 5</string>
    <string name="lbl_LED6">Led 6</string>
    <string name="lbl_LED7">Led 7</string>

    <string name="title_activity_settings">Settings</string>
    <string name="pref_rpi_url">Raspberry Pi listening URL</string>

    <string name="title_activity_about">About</string>

    <string name="msg_cannot_reach_rpi">Cannot reach Raspberry Pi.</string>
    <string name="msg_speak_prompt">Say your action...</string>
    <string name="msg_command_not_recognized">Command not recognized</string>

    <string name="html_about"><![CDATA[
        <p>
        Raspberry Leds is an Android application that allows to switch on and off leds connected to
        a Raspberry Pi GPIO. In the Raspberry Pi side it is needed to install the Raspberry Leds
        Server application that listen and executes the commands launched by the Android
        application.
        </p>
        <h2>License</h2>
        <p>Licensed under the Apache License, Version 2.0.</p>
        <p style="text-align:justify;">
        Copyright &copy; 2013 Adrián Romero Corchado.
        </p>
        <p style="text-align:justify;">
        <a href="https://github.com/adrianromero/raspberryleds">https://github.com/adrianromero/raspberryleds</a>
        </p>
    ]]></string>
</resources>