<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_speak"
          android:icon="@drawable/ic_btn_speak_now"
          android:title="@string/action_speak"
          android:showAsAction="ifRoom"
          android:onClick="onSpeakClicked"/>
    <item android:id="@+id/action_reload"
          android:icon="@drawable/ic_menu_refresh"
          android:title="@string/action_reload"
          android:showAsAction="ifRoom"
          android:onClick="onRefreshClicked"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"
        android:onClick="onSettingsClicked"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_about"
        android:onClick="onAboutClicked"/>
</menu>